@@ -9,8 +9,7 @@ import es.securitasdirect.tareas.model.TareaAviso;
 import es.securitasdirect.tareas.model.TareaExcel;
 import es.securitasdirect.tareas.model.TareaMantenimiento;
 import es.securitasdirect.tareas.model.tareaexcel.*;
-import es.securitasdirect.tareas.web.controller.params.ServiceParams;
-import es.securitasdirect.tareas.web.controller.params.ServiceParams;
+import es.securitasdirect.tareas.web.controller.params.ExternalParams;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.wso2.ws.dataservice.*;
@@ -32,79 +31,74 @@ public class QueryTareaService {
 
     @Inject
     private CCLIntegration cclIntegration;
-
-    @Resource(name = "callingListToModel")
-    private Map<String,List<String>> callingListToModel;
-
-
     @Inject
     protected SPAIOTAREAS2PortType spAioTareas2;
 
-    public static final  String EMPTY_STRING = "";
+    /**
+     * Maps the name of the Calling List to the specific tipe of Tarea
+     */
+    @Resource(name = "callingListToModel")
+    private Map<String, List<String>> callingListToModel;
+
 
     //checkCallingListContact fields
+    public static final String TASK_TYPE = "CALLING_LIST"; // Calling List Name
 
-    public Tarea queryTarea(  String ccIdentifier,
-                              String applicationUser,
-                              String ccUserId,
-                              String filter,
-                              List<String> returnData,
-                              List<String> callingList,
-                              String country){
-        LOGGER.debug("Calling to service CallingList with values:\n" +
-                        "ccIdentifier: {}\n" +
-                        "applicationUser: {}\n" +
-                        "ccUserId: {}\n" +
-                        "filter: {}\n" +
-                        "returnData: {}\n" +
-                        "callingList: {}\n" +
-                        "country: {}", ccIdentifier, applicationUser,
-                        ccUserId, filter, returnData, callingList,country);
 
-        Map<String,String> responseMap = checkCallingListContact(ccIdentifier,
+    public Tarea queryTarea(String ccIdentifier,
+                            String applicationUser,
+                            String ccUserId,
+                            String filter,
+                            String callingList,
+                            String country) {
+        LOGGER.debug("Calling to service CallingList with values: ccIdentifier: {} applicationUser: {} ccUserId: {} filter: {} callingList: {} country: {}", ccIdentifier, applicationUser, ccUserId, filter, callingList, country);
+
+        Map<String, String> responseMap = checkCallingListContact(ccIdentifier,
                 applicationUser,
                 ccUserId,
                 filter,
-                returnData,
                 callingList,
                 country);
 
-        if(responseMap!=null){
+        if (responseMap != null) {
             String tipoTarea = loadTipoTarea(responseMap);
             Tarea tarea = null;
-            if(tipoTarea!=null){
+            if (tipoTarea != null) {
                 if (tipoTarea.equals("TareaAviso")) {
                     tarea = createTareaAvisoFromParameters(responseMap);
                 } else if (tipoTarea.equals("TareaListadoAssistant")) {
                     tarea = createTareaListadoAssistantFromParameters(responseMap);
-                }else if(tipoTarea.equals("TareaEncuestaMantenimiento")){
+                } else if (tipoTarea.equals("TareaEncuestaMantenimiento")) {
                     tarea = createTareaEncuestaMantenimientoFromParameters(responseMap);
-                }else if(tipoTarea.equals("TareaEncuestaMarketing")){
+                } else if (tipoTarea.equals("TareaEncuestaMarketing")) {
                     tarea = createTareaEncuestaMarketingFromParameters(responseMap);
-                }else if(tipoTarea.equals("TareaKeybox")){
+                } else if (tipoTarea.equals("TareaKeybox")) {
                     tarea = createTareaKeyboxFromParameters(responseMap);
-                }else if(tipoTarea.equals("TareaLimpiezaCuota")){
-                    tarea =createTareaLimpiezaCuotaFromParameters(responseMap);
-                }else if(tipoTarea.equals("TareaOtrasCampanas")){
-                    tarea =  createTareaOtrasCampanasFromParameters(responseMap);
-                }else if(tipoTarea.equals("TareaMantenimiento")){
+                } else if (tipoTarea.equals("TareaLimpiezaCuota")) {
+                    tarea = createTareaLimpiezaCuotaFromParameters(responseMap);
+                } else if (tipoTarea.equals("TareaOtrasCampanas")) {
+                    tarea = createTareaOtrasCampanasFromParameters(responseMap);
+                } else if (tipoTarea.equals("TareaMantenimiento")) {
                     tarea = createTareaMantenimientoFromParameters(responseMap);
                 }
                 return tarea;
-            }else{
-                LOGGER.warn("Tipo tarea not found in response map");
+            } else {
+                LOGGER.warn("Tipo tarea not found in response map checkCallingListContact.");
                 return null;
             }
         } else {
-            LOGGER.warn("Response map not recovered from service call");
+            LOGGER.warn("Response map not recovered from service call checkCallingListContact.");
             return null;
         }
     }
 
-    private String loadTipoTarea(Map<String, String> responseMap){
-        String callingList = responseMap.get(ServiceParams.CALLING_LIST_RESPONSE_TIPO_TAREA);
+    /**
+     * Returns the specific Tarea type from the response, mapping with a map configured in Spring
+     */
+    private String loadTipoTarea(Map<String, String> responseMap) {
+        String callingList = responseMap.get(TASK_TYPE);
         for (String tipoTarea : callingListToModel.keySet()) {
-            if (callingListToModel.get(tipoTarea)!=null && callingListToModel.get(tipoTarea).contains(callingList)) {
+            if (callingListToModel.get(tipoTarea) != null && callingListToModel.get(tipoTarea).contains(callingList)) {
                 return tipoTarea;
             }
         }
@@ -112,30 +106,30 @@ public class QueryTareaService {
     }
 
 
-    private boolean cclResponseHasError(CclResponse response){
+    private boolean cclResponseHasError(CclResponse response) {
         boolean hasError = true;
-        if(response!=null && response.getOperationResult()!=null){
-            if(response.getOperationResult().getResultCode()==200){
+        if (response != null && response.getOperationResult() != null) {
+            if (response.getOperationResult().getResultCode() == 200) {
                 hasError = false;
             }
         }
         return hasError;
     }
 
-    private void printCclResponseError(CclResponse response){
+    private void printCclResponseError(CclResponse response) {
         StringBuilder sb = new StringBuilder();
-        if(response!=null && response.getOperationResult()!=null){
+        if (response != null && response.getOperationResult() != null) {
             sb.append("ERROR CODE: [");
             sb.append(response.getOperationResult().getResultCode());
             sb.append("]");
             sb.append(" - ERROR MESSAGE: [");
-            if(response.getOperationResult().getResultMessage()!=null){
+            if (response.getOperationResult().getResultMessage() != null) {
                 sb.append(response.getOperationResult().getResultMessage());
-            }else{
+            } else {
                 sb.append("Not found");
             }
             sb.append("]");
-        }else{
+        } else {
             sb.append("ERROR DATA NOT FOUND");
         }
         LOGGER.error(sb.toString());
@@ -186,20 +180,19 @@ public class QueryTareaService {
         TareaMantenimiento tarea = new TareaMantenimiento();
         loadTareaCommons(tarea, parameters);
 
-        tarea.setContrato(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_CONTRATO));
-        tarea.setDireccion(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_DIRECCION));
-        tarea.setCiudad(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_CIUDAD));
-        tarea.setFechaEvento(toDateFromParam(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_FECHAEVENTO)));
-        tarea.setTipificacion(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_TIPIFICACION));
-        tarea.setAgenteAsignado(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_AGENTEASIGNADO));
-        tarea.setAgenteCierre(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_AGENTECIERRE));
-        tarea.setOpcionTipificacion(toIntegerFromParam(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_OPCIONTIPIFICACION)));
-        tarea.setKey1(toIntegerFromParam(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_KEY1)));
-        tarea.setKey2(toIntegerFromParam(parameters.get(ServiceParams.TAREA_MANTENIMIENTO_KEY2)));
+        tarea.setContrato(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_CONTRATO));
+        tarea.setDireccion(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_DIRECCION));
+        tarea.setCiudad(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_CIUDAD));
+        tarea.setFechaEvento(toDateFromMap(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_FECHAEVENTO)));
+        tarea.setTipificacion(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_TIPIFICACION));
+        tarea.setAgenteAsignado(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_AGENTEASIGNADO));
+        tarea.setAgenteCierre(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_AGENTECIERRE));
+        tarea.setOpcionTipificacion(toIntegerFromMap(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_OPCIONTIPIFICACION)));
+        tarea.setKey1(toIntegerFromMap(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_KEY1)));
+        tarea.setKey2(toIntegerFromMap(parameters.get(ExternalParams.TAREA_MANTENIMIENTO_KEY2)));
 
         return tarea;
     }
-
 
 
     private Tarea createTareaEncuestaMantenimientoFromParameters(Map<String, String> parameters) {
@@ -207,14 +200,14 @@ public class QueryTareaService {
         loadTareaCommons(tarea, parameters);
         loadTareaExcelCommons(tarea, parameters);
 
-        tarea.setNumeroMantenimiento(toIntegerFromParam(parameters.get(ServiceParams.ENCUESTAMNTOS_MANTENIMIENTO)));
-        tarea.setTecnico(parameters.get(ServiceParams.ENCUESTAMNTOS_TECNICO));
-        tarea.setResponsable(parameters.get(ServiceParams.ENCUESTAMNTOS_RESPONSABLE));
-        tarea.setCentroCoste(parameters.get(ServiceParams.ENCUESTAMNTOS_CENTROCOSTE));
-        tarea.setRazonClaveValoracion(parameters.get(ServiceParams.ENCUESTAMNTOS_RAZON));
-        tarea.setSolucion(parameters.get(ServiceParams.ENCUESTAMNTOS_SOLUCION));
-        tarea.setCompromiso(parameters.get(ServiceParams.ENCUESTAMNTOS_COMPROMISO));
-        tarea.setDepartamentoDestino(parameters.get(ServiceParams.ENCUESTAMNTOS_DPTO_DESTINO));
+        tarea.setNumeroMantenimiento(toIntegerFromMap(parameters.get(ExternalParams.ENCUESTAMNTOS_MANTENIMIENTO)));
+        tarea.setTecnico(parameters.get(ExternalParams.ENCUESTAMNTOS_TECNICO));
+        tarea.setResponsable(parameters.get(ExternalParams.ENCUESTAMNTOS_RESPONSABLE));
+        tarea.setCentroCoste(parameters.get(ExternalParams.ENCUESTAMNTOS_CENTROCOSTE));
+        tarea.setRazonClaveValoracion(parameters.get(ExternalParams.ENCUESTAMNTOS_RAZON));
+        tarea.setSolucion(parameters.get(ExternalParams.ENCUESTAMNTOS_SOLUCION));
+        tarea.setCompromiso(parameters.get(ExternalParams.ENCUESTAMNTOS_COMPROMISO));
+        tarea.setDepartamentoDestino(parameters.get(ExternalParams.ENCUESTAMNTOS_DPTO_DESTINO));
         return tarea;
     }
 
@@ -223,8 +216,8 @@ public class QueryTareaService {
         loadTareaCommons(tarea, parameters);
         loadTareaExcelCommons(tarea, parameters);
 
-        tarea.setFecha(toDateFromParam(parameters.get(ServiceParams.ENCUESTASMKT_FECHA)));
-        tarea.setMotivo(parameters.get(ServiceParams.ENCUESTASMKT_MOTIVO));
+        tarea.setFecha(toDateFromMap(parameters.get(ExternalParams.ENCUESTASMKT_FECHA)));
+        tarea.setMotivo(parameters.get(ExternalParams.ENCUESTASMKT_MOTIVO));
         return tarea;
     }
 
@@ -233,11 +226,11 @@ public class QueryTareaService {
         loadTareaCommons(tarea, parameters);
         loadTareaExcelCommons(tarea, parameters);
 
-        tarea.setContrato(parameters.get(ServiceParams.KEYBOX_CONTRATO));
-        tarea.setFechaFactura(toDateFromParam(parameters.get(ServiceParams.KEYBOX_FECHA_FACTURA)));
-        tarea.setNumeroFactura(parameters.get(ServiceParams.KEYBOX_NUMERO_FACTURA));
-        tarea.setImporteLinea(toIntegerFromParam(parameters.get(ServiceParams.KEYBOX_IMPORTE_LINEA)));
-        tarea.setIdentificadorItem(parameters.get(ServiceParams.KEYBOX_ID_ITEM));
+        tarea.setContrato(parameters.get(ExternalParams.KEYBOX_CONTRATO));
+        tarea.setFechaFactura(toDateFromMap(parameters.get(ExternalParams.KEYBOX_FECHA_FACTURA)));
+        tarea.setNumeroFactura(parameters.get(ExternalParams.KEYBOX_NUMERO_FACTURA));
+        tarea.setImporteLinea(toIntegerFromMap(parameters.get(ExternalParams.KEYBOX_IMPORTE_LINEA)));
+        tarea.setIdentificadorItem(parameters.get(ExternalParams.KEYBOX_ID_ITEM));
         return tarea;
     }
 
@@ -246,74 +239,92 @@ public class QueryTareaService {
         loadTareaCommons(tarea, parameters);
         loadTareaExcelCommons(tarea, parameters);
 
-        tarea.setCampo1(parameters.get(ServiceParams.OTRASCAMPANAS_CAMPO1));
-        tarea.setCampo2(parameters.get(ServiceParams.OTRASCAMPANAS_CAMPO2));
-        tarea.setCampo3(parameters.get(ServiceParams.OTRASCAMPANAS_CAMPO3));
-        tarea.setComentario(parameters.get(ServiceParams.OTRASCAMPANAS_CAMPO3));
-        tarea.setTipoCampana(parameters.get(ServiceParams.OTRASCAMPANAS_TIPOTAREA));
+        tarea.setCampo1(parameters.get(ExternalParams.OTRASCAMPANAS_CAMPO1));
+        tarea.setCampo2(parameters.get(ExternalParams.OTRASCAMPANAS_CAMPO2));
+        tarea.setCampo3(parameters.get(ExternalParams.OTRASCAMPANAS_CAMPO3));
+        tarea.setComentario(parameters.get(ExternalParams.OTRASCAMPANAS_CAMPO3));
+        tarea.setTipoCampana(parameters.get(ExternalParams.OTRASCAMPANAS_TIPOTAREA));
 
         return tarea;
     }
 
     private Tarea createTareaLimpiezaCuotaFromParameters(Map<String, String> parameters) {
-       TareaLimpiezaCuota tarea = new TareaLimpiezaCuota();
-       loadTareaCommons(tarea, parameters);
-       loadTareaExcelCommons(tarea, parameters);
+        TareaLimpiezaCuota tarea = new TareaLimpiezaCuota();
+        loadTareaCommons(tarea, parameters);
+        loadTareaExcelCommons(tarea, parameters);
 
-       tarea.setContrato(parameters.get(ServiceParams.LIMPIEZA_CUOTA_CONTRATO));
-       tarea.setDepartamentoAsignado(parameters.get(ServiceParams.LIMPIEZA_CUOTA_DPT_ASIGNADO));
-       tarea.setDescripcionIncidencia(parameters.get(ServiceParams.LIMPIEZA_CUOTA_DESCRIPTCION));
+        tarea.setContrato(parameters.get(ExternalParams.LIMPIEZA_CUOTA_CONTRATO));
+        tarea.setDepartamentoAsignado(parameters.get(ExternalParams.LIMPIEZA_CUOTA_DPT_ASIGNADO));
+        tarea.setDescripcionIncidencia(parameters.get(ExternalParams.LIMPIEZA_CUOTA_DESCRIPTCION));
 
-       return tarea;
+        return tarea;
     }
 
     /**
      * Las respuestas de CclResponse tiene un mapa de mapas pero la lista de items solo retorna un item siempre.
-     * Retornamos un mapa <clave,valor> de los datos de la respuesta
+     * Retornamos un mapa <clave,valor> de los datos de la respuesta.
+     *
      * @return
      */
-    private Map<String, String> loadCclResponseMap(CclResponse reponse){
+    private Map<String, String> loadCclResponseMap(CclResponse reponse) {
         HashMap<String, String> responseMap = new HashMap<String, String>();
-        Iterator<Item> iterator = reponse.getColumnReturn().get(0).getItem().iterator();
-        while(iterator.hasNext()) {
-            Item item = iterator.next();
-            if(item!=null){
-                if(item.getCampo()!=null && item.getValor()!=null){
+        for (Item item : reponse.getColumnReturn().get(0).getItem()) { //Recorre la lista, aunque no parezca una lista
+            if (item != null) {
+                if (item.getCampo() != null && item.getValor() != null) {
                     responseMap.put(item.getCampo(), item.getValor());
-                }else if(item.getCampo()!=null && item.getValor()==null){
-                    responseMap.put(item.getCampo(), EMPTY_STRING);
+                } else if (item.getCampo() != null && item.getValor() == null) {
+                    responseMap.put(item.getCampo(), ""); //TODO QUITAR
                 }
             }
         }
-        LOGGER.debug("Loaded response map:\n{}", responseMap);
         return responseMap;
     }
 
+    /**
+     * Web Service Calling and transformation of the results to Map
+     *
+     * @param ccIdentifier
+     * @param applicationUser
+     * @param ccUserId
+     * @param filter
+     * @param callingList
+     * @param country
+     * @return
+     */
     private Map<String, String> checkCallingListContact(String ccIdentifier,
                                                         String applicationUser,
                                                         String ccUserId,
                                                         String filter,
-                                                        List<String> returnData,
-                                                        List<String> callingList,
-                                                        String country){
+                                                        String callingList,
 
-        CclResponse response = cclIntegration.checkCallingListContact(ccIdentifier,
-                applicationUser,
-                ccUserId,
-                filter,
-                returnData,
-                callingList,
-                country);
+                                                        String country) {
+        //WS Call
+        CclResponse response = null;
+        try {
+            response = cclIntegration.checkCallingListContact(ccIdentifier,
+                    applicationUser,
+                    ccUserId,
+                    filter,
+                    Arrays.asList(""), //Allways ask for all the parameters
+                    Arrays.asList(callingList),
+                    country);
+        } catch (Exception e) {
+            LOGGER.error("Error calling CCL checkCallingListContact.", e);
+            return null;
+        }
+
+        //Results Map
         Map<String, String> responseMap = null;
 
         //Comprobar respuesta si tiene error:
-        if(cclResponseHasError(response)){
+        if (cclResponseHasError(response)) {
             printCclResponseError(response);
             //TODO Definir si realizar otras operaciones en caso de error
-        }else{
+        } else {
             //Si la respuesta no tiene error
             //Obtener el tipo de respuesta
             responseMap = loadCclResponseMap(response);
+            LOGGER.debug("checkCallingListContact result {}", responseMap);
         }
         return responseMap;
     }
@@ -324,7 +335,7 @@ public class QueryTareaService {
      */
     private Tarea loadTareaCommons(Tarea tarea, Map<String, String> parameters) {
         assert tarea != null && parameters != null;
-        tarea.setNumeroInstalacion(parameters.get(ServiceParams.NUMERO_INSTALACION));
+        tarea.setNumeroInstalacion(parameters.get(ExternalParams.NUMERO_INSTALACION));
         //TODO JESUS
         return tarea;
     }
@@ -336,8 +347,8 @@ public class QueryTareaService {
      */
     private TareaExcel loadTareaExcelCommons(TareaExcel tarea, Map<String, String> parameters) {
         assert tarea != null && parameters != null;
-        //TODO Pendiente saber formato lista tarea.setMotivosCierre(parameters.get(ServiceParams.MOTIVO_CIERRE));
-        tarea.setCompensacion(parameters.get(ServiceParams.COMPENSACION));
+        //TODO Pendiente saber formato lista tarea.setMotivosCierre(parameters.get(ExternalParams.MOTIVO_CIERRE));
+        tarea.setCompensacion(parameters.get(ExternalParams.COMPENSACION));
         return tarea;
     }
 
@@ -346,53 +357,45 @@ public class QueryTareaService {
         loadTareaCommons(tarea, parameters);
         loadTareaExcelCommons(tarea, parameters);
 
-        tarea.setNumeroInstalacion(parameters.get(ServiceParams.ASSISTANT_INSTALACION));
-        tarea.setNumeroMantenimiento(toIntegerFromParam(parameters.get(ServiceParams.ASSISTANT_MANTENIMIENTO)));
-        tarea.setTecnico(parameters.get(ServiceParams.ASSISTANT_TECNICO));
-        tarea.setDepartamento(parameters.get(ServiceParams.ASSISTANT_DEPARTAMENTO));
-        tarea.setGrupoPanel(parameters.get(ServiceParams.ASSISTANT_GRUPOPANEL));
-        tarea.setTotalSinIVA(toFloatFromParam(parameters.get(ServiceParams.ASSISTANT_TOTALSINIVA)));
-        tarea.setTotalConIVA(toFloatFromParam(parameters.get(ServiceParams.ASSISTANT_TOTALCONIVA)));
-        tarea.setNumeroParte(parameters.get(ServiceParams.ASSISTANT_NPARTE));
-        tarea.setFechaArchivo(toDateFromParam(parameters.get(ServiceParams.ASSISTANT_ARCHIVO_FECHA)));
-        tarea.setSubtipoIncidencia(parameters.get(ServiceParams.ASSISTANT_SUBIDA_INC_FECHA));
-        tarea.setFechaPago(toDateFromParam(parameters.get(ServiceParams.ASSISTANT_PAGO_FECHA)));
-        tarea.setIncidencia(parameters.get(ServiceParams.ASSISTANT_INCIDENCIA));
-        tarea.setSubtipoIncidencia(parameters.get(ServiceParams.ASSISTANT_SUBINCIDENCIA));
-        tarea.setSolicitudCliente(parameters.get(ServiceParams.ASSISTANT_SOLICITUD));
-        tarea.setCambiosIncidencia(parameters.get(ServiceParams.ASSISTANT_CAMBIOS));
-        tarea.setBoFechaGestion(toDateFromParam(parameters.get(ServiceParams.ASSISTANT_BO_GESTION_FECHA)));
-        tarea.setBoMatricula(parameters.get(ServiceParams.ASSISTANT_BO_MATRICULA));
-        tarea.setBoFechaRecepcion(toDateFromParam(parameters.get(ServiceParams.ASSISTANT_BO_RECEPCION_FECHA)));
-        tarea.setBoTipo(parameters.get(ServiceParams.ASSISTANT_BO_EMPRESA_PARTICULAR));
-        tarea.setBoComentarios(parameters.get(ServiceParams.ASSISTANT_BO_COMENTARIOS));
-        tarea.setTelefono(parameters.get(ServiceParams.ASSISTANT_CONTACTO_TELEFONO));
+        tarea.setNumeroInstalacion(parameters.get(ExternalParams.ASSISTANT_INSTALACION));
+        tarea.setNumeroMantenimiento(toIntegerFromMap(parameters.get(ExternalParams.ASSISTANT_MANTENIMIENTO)));
+        tarea.setTecnico(parameters.get(ExternalParams.ASSISTANT_TECNICO));
+        tarea.setDepartamento(parameters.get(ExternalParams.ASSISTANT_DEPARTAMENTO));
+        tarea.setGrupoPanel(parameters.get(ExternalParams.ASSISTANT_GRUPOPANEL));
+        tarea.setTotalSinIVA(toFloatFromMap(parameters.get(ExternalParams.ASSISTANT_TOTALSINIVA)));
+        tarea.setTotalConIVA(toFloatFromMap(parameters.get(ExternalParams.ASSISTANT_TOTALCONIVA)));
+        tarea.setNumeroParte(parameters.get(ExternalParams.ASSISTANT_NPARTE));
+        tarea.setFechaArchivo(toDateFromMap(parameters.get(ExternalParams.ASSISTANT_ARCHIVO_FECHA)));
+        tarea.setSubtipoIncidencia(parameters.get(ExternalParams.ASSISTANT_SUBIDA_INC_FECHA));
+        tarea.setFechaPago(toDateFromMap(parameters.get(ExternalParams.ASSISTANT_PAGO_FECHA)));
+        tarea.setIncidencia(parameters.get(ExternalParams.ASSISTANT_INCIDENCIA));
+        tarea.setSubtipoIncidencia(parameters.get(ExternalParams.ASSISTANT_SUBINCIDENCIA));
+        tarea.setSolicitudCliente(parameters.get(ExternalParams.ASSISTANT_SOLICITUD));
+        tarea.setCambiosIncidencia(parameters.get(ExternalParams.ASSISTANT_CAMBIOS));
+        tarea.setBoFechaGestion(toDateFromMap(parameters.get(ExternalParams.ASSISTANT_BO_GESTION_FECHA)));
+        tarea.setBoMatricula(parameters.get(ExternalParams.ASSISTANT_BO_MATRICULA));
+        tarea.setBoFechaRecepcion(toDateFromMap(parameters.get(ExternalParams.ASSISTANT_BO_RECEPCION_FECHA)));
+        tarea.setBoTipo(parameters.get(ExternalParams.ASSISTANT_BO_EMPRESA_PARTICULAR));
+        tarea.setBoComentarios(parameters.get(ExternalParams.ASSISTANT_BO_COMENTARIOS));
+        tarea.setTelefono(parameters.get(ExternalParams.ASSISTANT_CONTACTO_TELEFONO));
         return tarea;
     }
 
 
     /**
-     * Tarea aviso se obtienen los parametros de otro servicio, de la respuesta del calling list únicamente se obtiene el
-     * id_aviso, con el que consultamos en el otro servicio mencionado.
      * @param responseMap
      * @return
      */
-    private TareaAviso createTareaAvisoFromParameters(Map<String, String> responseMap){
+    private TareaAviso createTareaAvisoFromParameters(Map<String, String> responseMap) {
         TareaAviso tarea = null;
-        String idAviso = responseMap.get(ServiceParams.CALLING_LIST_RESPONSE_ID_AVISO);
-        if(idAviso!=null){
-            try{
-                int idAvisoInt = Integer.valueOf(idAviso);
-                if(idAvisoInt!=0){
-                    tarea = (TareaAviso)getTareaByIdAviso(idAvisoInt);
-                }else{
-                    LOGGER.warn("Not a valid ID_AVISO: {}",idAviso);
-                    tarea = null;
-                }
-            }catch(DataServiceFault dataServiceFault){
+        Integer idAviso = toIntegerFromMap(responseMap.get(ExternalParams.ID_AVISO_UP));
+        if (idAviso != null && idAviso != 0) {
+            try {
+                tarea = getTareaByIdAviso(idAviso);
+            } catch (DataServiceFault dataServiceFault) {
                 LOGGER.error("Error calling service for TareaAviso data or not valid ID_AVISO: {}", idAviso);
             }
-        }else{
+        } else {
             LOGGER.warn("ID_AVISO (idaviso) not found in response map");
         }
         return tarea;
@@ -400,21 +403,21 @@ public class QueryTareaService {
 
 
     /**
-     * Obtiene una Tarea by Id de Aviso
+     * Obtiene una Tarea by Id de Aviso mediante WS
      *
      * @param idAviso
      * @return
      */
-    public Tarea getTareaByIdAviso(Integer idAviso) throws DataServiceFault {
+    public TareaAviso getTareaByIdAviso(Integer idAviso) throws DataServiceFault {
         TareaAviso tarea = null;
-        if(idAviso!=null && !idAviso.equals(0)){
+        if (idAviso != null && !idAviso.equals(0)) {
             List<GetAvisobyIdResult> avisobyId = spAioTareas2.getAvisobyId(idAviso);
             if (avisobyId != null && !avisobyId.isEmpty()) {
                 tarea = mapTareaAvisoFromWS(avisobyId.get(0)); //TODO Devuelve una lista aunque se supone que solo es uno, check
             }
-            LOGGER.debug("Consultado TareaAviso ({}): {}", idAviso, tarea);
-        }else{
-            LOGGER.warn("Can not query for an not informed AVISO, returning tarea = null;");
+            LOGGER.debug("Queried Aviso ({}): {}", idAviso, tarea);
+        } else {
+            LOGGER.warn("Can not query for an not informed idAviso.");
         }
         return tarea;
     }
@@ -422,19 +425,23 @@ public class QueryTareaService {
     /**
      * Conversores , indicar parametro (String)
      */
-    private Date toDateFromParam(String value) {
+    private Date toDateFromMap(String value) {
         return new Date(); //TODO JAVIER
     }
 
-    private Integer toIntegerFromParam(String value) {
-        return new Integer(0); //TODO JAVIER
+    private Integer toIntegerFromMap(String value) {
+        if (value == null || value.isEmpty()) {
+            return null;
+        } else {
+            return Integer.valueOf(value);
+        }
     }
 
-    private Float toFloatFromParam(String value) {
+    private Float toFloatFromMap(String value) {
         return new Float(0);
     }
 
-    private List toListFromParam(String value) {
+    private List toListFromMap(String value) {
         return new ArrayList();
     }
 
